--- a/popup.css
+++ b/popup.css
@@ -106,12 +106,17 @@
     border-radius: 10px;
 }
 
-#cursorUserCounterHeader {
-    font-size: 20px;
+#inforSectionHeader {
+    font-size: 15px;
+    padding: 5px;
     font-family: arial, sans-serif;
     font-weight: bold;
     color: #FFFFFF;
     margin-bottom: 10px;
+}
+
+html {
+    height: 340px;
 }
 
 body {
@@ -124,4 +129,33 @@ body {
     margin: 0px;
     padding: 10px;
     font-family: arial, sans-serif;
+}
+
+#inforSectionHeader {
+    margin-bottom: 10px;
+}
+
+#customizationWrapper {
+    display: inline-grid;
+    gap: 15px;
+    grid-template-columns: auto auto auto;
+    justify-content: space-evenly;
+}
+
+.customizationElement {
+    width: 50px;
+    height: 50px;
+    border-radius: 7px;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.customizationElement:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.8);
+}
+
+.customizationImage {
+    width: 100%;
+    height: 100%;
+    border-radius: 7px;
 }
