--- a/popup.css
+++ b/popup.css
@@ -104,6 +104,7 @@
     background-color: #2E2F32;
     padding: 10px;
     border-radius: 10px;
+    padding-bottom: 20px;
 }
 
 #inforSectionHeader {
@@ -140,6 +141,8 @@ body {
     gap: 15px;
     grid-template-columns: auto auto auto;
     justify-content: space-evenly;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .customizationElement {
@@ -151,11 +154,16 @@ body {
 }
 
 .customizationElement:hover {
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 25px 0px rgba(65, 65, 65, 0.9);
 }
 
 .customizationImage {
     width: 100%;
     height: 100%;
     border-radius: 7px;
+}
+
+.customizationElement.active {
+    background-color: rgba(100, 100, 100, 0.9);
+    box-shadow: 0px 0px 25px 0px rgba(65, 65, 65, 0.9);
 }
